@@ -131,3 +131,7 @@ E: btimby@gmail.com
 C: USA
 D: (issue #127) multiple masqueraded IP addresses patch.
 
+N: Bernd Deichmann
+W: http://deichmann-edv.de/
+D: issue 156
+
